feat(transport): define state machine ADTs
Add ConnectionState, SessionState, and LinkState ADTs for AMQP
protocol state machines. Each state machine follows the AMQP 1.0
spec sections 2.4.1, 2.5.1, and 2.6.1 respectively.

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,12 @@ library:
     - containers
     - uuid
     - time
+  exposed-modules:
+    - Network.AMQP.Types
+    - Network.AMQP.Transport
+    - Network.AMQP.Performatives
+    - Network.AMQP.Connection
+    - Network.AMQP.Client
 
 tests:
   haskell-amqp-test:
