--- a/haskell-amqp.cabal
+++ b/haskell-amqp.cabal
@@ -17,6 +17,7 @@ library
   exposed-modules:
       Network.AMQP.Client
       Network.AMQP.Connection
+      Network.AMQP.Performatives
       Network.AMQP.Transport
       Network.AMQP.Types
   other-modules:
