test(transport): add comprehensive state machine tests
Add tests covering:
- Valid state transitions for all three state machines
- Invalid state transition rejection with proper error types
- Complete state machine flows for both initiator and responder
- Edge cases and boundary conditions

All 149 tests pass including 36 new state machine tests.

--- a/.stack-work/install/x86_64-linux-nix/a8a1ff2e32894ea69832b61b81a6d368a4138fca16db531d6613adf27b46040f/9.8.4/pkgdb/haskell-amqp-0.1.0.0-A7DGC00cpY9FKKUxcbMchO.conf
+++ b/.stack-work/install/x86_64-linux-nix/a8a1ff2e32894ea69832b61b81a6d368a4138fca16db531d6613adf27b46040f/9.8.4/pkgdb/haskell-amqp-0.1.0.0-A7DGC00cpY9FKKUxcbMchO.conf
@@ -10,10 +10,11 @@ synopsis:             AMQP 1.0 client library for Haskell
 description:
     A learning-focused implementation of AMQP 1.0 protocol client
 
-abi:                  e19ed5511f073faa485525bb7bfad7ba
+abi:                  f5d0490e12280f3d05b6846645b628b6
 exposed:              True
 exposed-modules:
-    Network.AMQP.Client Network.AMQP.Connection Network.AMQP.Transport
+    Network.AMQP.Client Network.AMQP.Connection
+    Network.AMQP.Performatives Network.AMQP.Transport
     Network.AMQP.Types
 
 hidden-modules:       Paths_haskell_amqp
