feat(messaging): implement message structure and encoding
Implement AMQP 1.0 message structure according to spec section 3.2:
- Define Message data type with all sections (header, properties, app-properties, body, footer)
- Define Header fields (durable, priority, ttl, first-acquirer, delivery-count)
- Define Properties fields (message-id, to, subject, reply-to, correlation-id, content-type, etc.)
- Define body variants (DataBody, AmqpSequenceBody, AmqpValueBody)
- Implement message encoding as concatenated described type sections
- Implement message decoding with proper multi-section handling
- Add comprehensive roundtrip tests for all message components

All message sections are optional and properly encoded with their
respective descriptors (0x70-0x78). Message body can be one of three
types: binary data, AMQP sequences, or AMQP values.

--- a/haskell-amqp.cabal
+++ b/haskell-amqp.cabal
@@ -18,6 +18,7 @@ library
       Network.AMQP.Types
       Network.AMQP.Transport
       Network.AMQP.Performatives
+      Network.AMQP.Messaging
       Network.AMQP.Connection
       Network.AMQP.Client
   other-modules:
