--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ library:
     - Network.AMQP.Types
     - Network.AMQP.Transport
     - Network.AMQP.Performatives
+    - Network.AMQP.Messaging
     - Network.AMQP.Connection
     - Network.AMQP.Client
 
