--- a/.stack-work/install/x86_64-linux-nix/a8a1ff2e32894ea69832b61b81a6d368a4138fca16db531d6613adf27b46040f/9.8.4/pkgdb/haskell-amqp-0.1.0.0-A7DGC00cpY9FKKUxcbMchO.conf
+++ b/.stack-work/install/x86_64-linux-nix/a8a1ff2e32894ea69832b61b81a6d368a4138fca16db531d6613adf27b46040f/9.8.4/pkgdb/haskell-amqp-0.1.0.0-A7DGC00cpY9FKKUxcbMchO.conf
@@ -10,10 +10,10 @@ synopsis:             AMQP 1.0 client library for Haskell
 description:
     A learning-focused implementation of AMQP 1.0 protocol client
 
-abi:                  f5d0490e12280f3d05b6846645b628b6
+abi:                  eed6eb100c34e7423e2f89039edddd78
 exposed:              True
 exposed-modules:
-    Network.AMQP.Client Network.AMQP.Connection
+    Network.AMQP.Client Network.AMQP.Connection Network.AMQP.Messaging
     Network.AMQP.Performatives Network.AMQP.Transport
     Network.AMQP.Types
 
