--- a/haskell-amqp.cabal
+++ b/haskell-amqp.cabal
@@ -42,15 +42,20 @@ test-suite haskell-amqp-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      MockServer
       Paths_haskell_amqp
   hs-source-dirs:
       test
   build-depends:
       QuickCheck
+    , async
     , base >=4.14 && <5
     , binary
     , bytestring
+    , containers
     , haskell-amqp
+    , network
+    , stm
     , tasty
     , tasty-hunit
     , tasty-quickcheck
